[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy>=1.18.0", "pybind11==2.1.0"]

[tool.poetry]
name = 'spycone'
version = "0.0.2"
description = "A splicing-aware time course network enricher"
authors = ["Chit Tong Lio"]
license = "GPL-3.0-only"
homepage = "https://github.com/yollct/spycone.git"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
pandas = "^1.0.1"
numpy = "^1.4"
seaborn = ""
scikit-learn = "^0.23.2"
scikit-learn-extra = "^0.2.0"
networkx = "^2.4"
matplotlib = "^3.1.3"
gseapy = "^0.10.4"
scipy = "^1.4.1"
statsmodels = "^0.11.0"
tslearn = "^0.5.1.0"
pybind11 = "2.1.0"


requires = [
    ##all the dependencies
    'pandas>=1.0.1',
    'numpy>=1.18.1',
    'seaborn',
    'scikit-learn>=0.23.2',
    'scikit-learn-extra>=0.2.0',
    'networkx>=2.4',
    'matplotlib>=3.1.3',
    'gseapy>=0.10.4',
    'scipy>=1.4.1',
    'statsmodels>=0.11.0',
    'tslearn>=0.5.1.0',
    'pybind11==2.1.0'
]
